# seafile-client

./: .gitignore  CMakeLists.txt
fsplugin/: CMakeLists.txt  FinderSync.m  Info.plist  seafile-client_fsplugin.entitlements
src/: configurator.cpp  main.cpp  seafile-applet.cpp
src/filebrowser/: file-browser-manager.cpp
src/ui/: repo-tree-model.cpp  repo-tree-view.cpp  tray-icon.cpp  tray-icon.h
src/utils/: utils-mac.h  utils-mac.mm
