CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

PROJECT(seafile-client-fsplugin)
SET(PROJECT_VERSION "1.0.0")

IF (NOT (${CMAKE_BUILD_TYPE} MATCHES Release))
  SET(CMAKE_BUILD_TYPE Debug)
ENDIF()

SET(CODESIGN_CERTIFICATE CACHE "the certificate to sign code" "-")

MESSAGE(STATUS "Build type: ${CMAKE_BUILD_TYPE}")

IF (NOT APPLE)
    MESSAGE(FATAL_ERROR "Support only on OS X")
ENDIF()

IF (NOT CMAKE_GENERATOR STREQUAL Xcode)
    MESSAGE(FATAL_ERROR "Support only for Xcode generator")
ENDIF()

FIND_LIBRARY(AppKit_LIBRARY AppKit)
MARK_AS_ADVANCED (AppKit_LIBRARY)

FIND_LIBRARY(FinderSync_LIBRARY FinderSync)
MARK_AS_ADVANCED (FinderSync_LIBRARY)

ADD_DEFINITIONS(-fapplication-extension)
SET(CMAKE_EXE_LINKER_FLAGS "-fapplication-extension -e _NSExtensionMain -fobjc-arc ${CMAKE_EXE_LINKER_FLAGS}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
ADD_EXECUTABLE(seafile-client-fsplugin MACOSX_BUNDLE
  FinderSync.m
)

SET_TARGET_PROPERTIES(seafile-client-fsplugin PROPERTIES
  MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist
  XCODE_ATTRIBUTE_GCC_GENERATE_DEBUGGING_SYMBOLS "YES"
  XCODE_ATTRIBUTE_DEBUG_INFORMATION_FORMAT "dwarf-with-dsym"
  XCODE_ATTRIBUTE_GCC_ENABLE_PASCAL_STRINGS "NO"
  XCODE_ATTRIBUTE_MACOSX_DEPLOYMENT_TARGET "10.10"
  )

TARGET_LINK_LIBRARIES(seafile-client-fsplugin
  ${AppKit_LIBRARY}
  ${FinderSync_LIBRARY}
)

FIND_PROGRAM(CODESIGN codesign)

SET(BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR}/\${CONFIGURATION}/seafile-client-fsplugin.app)
SET(TARGET_DIR ${CMAKE_CURRENT_BINARY_DIR}/seafile-client-fsplugin.appex)
ADD_CUSTOM_COMMAND(TARGET seafile-client-fsplugin
  POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E remove -f ${TARGET_DIR} &&
  ${CMAKE_COMMAND} -E copy_directory ${BUILD_DIR} ${TARGET_DIR} &&
  ${CODESIGN} --force --sign ${CODESIGN_CERTIFICATE} --entitlements ${CMAKE_CURRENT_SOURCE_DIR}/seafile-client_fsplugin.entitlements ${TARGET_DIR}
  )
